# cpp-SDL-imgui

./: .clang-format  CMakeLists.txt
src/: main.cpp  pch.h
src/debug/: gui.cpp  gui.h  perf.cpp  perf.h
src/sdl2/: async_file.cpp  async_file.h  handle.h  prelude.h  wrap.h
src/sdl2/assets/: handle.h  loader.cpp  loader.h
src/sdl2/ecs/: archetype.h  asset_manager.cpp  asset_manager.h  chunk.h  component_traits.h  prelude.h  tuple.h  type.h
src/t9/: color.h  func_traits.h  hash.h  singleton.h  type2int.h  type_list.h
src/t9/sdl2/: mutex.h
src/task/: context.h  job.cpp  job.h  job_system.cpp  job_system.h  permission.h  prelude.h  task.cpp  task.h  task_builder.h  task_job.cpp  task_job.h  task_system.cpp  task_system.h  task_traits.h  work.h  work_ref.h
